--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -13,6 +13,19 @@
   <button>+ Add News</button>
 </a>
 
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+
+<h5>Last Login Session: {{ last_login }} </h5>
+
+<a href="?filter=all">
+    <button type="button">All Articles</button>
+</a>
+<a href="?filter=my">
+    <button type="button">My Articles</button>
+</a> 
+
 <hr>
 
 {% if not news_list %}
