--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -37,7 +37,7 @@
         {% if not news_list %}
           <div class="bg-white rounded-lg border border-gray-200 p-12 text-center">
             <div class="w-32 h-32 mx-auto mb-4">
-              <img src="{% static 'image/no-news.png' %}" alt="No news available" class="w-full h-full object-contain">
+              <img src="{% static 'image/no_news.png' %}" alt="No news available" class="w-full h-full object-contain">
             </div>
             <h3 class="text-lg font-medium text-gray-900 mb-2">No news found</h3>
             <p class="text-gray-500 mb-6">Be the first to share football news with the community.</p>
